CHATS_SIT/force-app/main/default/objects/sfsit_t_pmt_plan_hist__x.object
<CustomObject>
    <description>sfsit$t_pmt_plan_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_pmt_plan_hist</externalName>
    <fields>
        <fullName>amt_plan_pmt__c</fullName>
        <description>amt_plan_pmt</description>
        <externalDeveloperName>amt_plan_pmt</externalDeveloperName>
        <label>Plan Payment Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_plan_pmt_pct_min__c</fullName>
        <description>amt_plan_pmt_pct_min</description>
        <externalDeveloperName>amt_plan_pmt_pct_min</externalDeveloperName>
        <label>Plan Payment percentage minimum amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cde_freq__c</fullName>
        <description>cde_freq</description>
        <externalDeveloperName>cde_freq</externalDeveloperName>
        <label>Frequency Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_status_pmt_plan__c</fullName>
        <description>cde_status_pmt_plan</description>
        <externalDeveloperName>cde_status_pmt_plan</externalDeveloperName>
        <label>Plan Payment Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>idn_case__c</fullName>
        <description>idn_case</description>
        <externalDeveloperName>idn_case</externalDeveloperName>
        <label>Case ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_plan_pmt__c</fullName>
        <description>idn_plan_pmt</description>
        <externalDeveloperName>idn_plan_pmt</externalDeveloperName>
        <label>Plan Payment ID</label>
        <length>50</length>
        <referenceTargetField>T_PMT_PLAN__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_PMT_PLAN__c</referenceTo>
        <relationshipLabel>Payment Plan Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_pmt_plan_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_plan_pmt_hist__c</fullName>
        <description>idn_plan_pmt_hist</description>
        <externalDeveloperName>idn_plan_pmt_hist</externalDeveloperName>
        <label>Plan Payment Hist ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_provr__c</fullName>
        <description>idn_provr</description>
        <externalDeveloperName>idn_provr</externalDeveloperName>
        <label>Provider ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_pmt_plan_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_provr_active__c</fullName>
        <description>ind_provr_active</description>
        <externalDeveloperName>ind_provr_active</externalDeveloperName>
        <label>Active Provider</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_curr__c</fullName>
        <description>ind_record_curr</description>
        <externalDeveloperName>ind_record_curr</externalDeveloperName>
        <label>Current Record Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical Deleted Record</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_pctg__c</fullName>
        <description>nbr_pctg</description>
        <externalDeveloperName>nbr_pctg</externalDeveloperName>
        <label>Percentage Number</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Payment Plan History</label>
    <pluralLabel>Payment Plan History</pluralLabel>
</CustomObject>